Fix mobile navigation and layout issues
- Fix hamburger menu visibility by converting to overlay layout, now the hamburger menu won't be hidden behind the hero div
- Resolve footer overflow on mobile by switching to column layout on tablet/mobile breakpoints
- Adjust landing page application section font size for mobile, it was causing the page to overflow and scroll
- Fix a layout issue on the application section, the "Security critical devices" div is offset on desktop for its preview image, but on mobile these images are hidden

Note: Some pages may still overflow on mobile, this can be addressed in the future

Desktop experience remains unchanged

--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -90,9 +90,14 @@ ul#applications {
     flex-wrap: wrap;
     list-style: none;
     padding: 2 * $spacer;
+
     @media screen and (min-width: $tablet) {
       padding-left: 140px;
       padding-right: 140px;
+    }
+
+    @media screen and (max-width: $tablet) {
+      font-size: 1.5rem;
     }
 
     font-size: 2rem;
@@ -127,12 +132,16 @@ ul#applications {
   }
 
   li:nth-child(even) {
-    flex-direction: row-reverse;
     background-color: $primary-color;
     color: white;
-    div:first-child {
-      flex: 1;
-      margin-left: 3 * $spacer;
+  }
+  @media screen and (min-width: $tablet) {
+    li:nth-child(even) {
+      flex-direction: row-reverse;
+      div:first-child {
+        flex: 1;
+        margin-left: 3 * $spacer;
+      }
     }
   }
 }
